Update examples of config

--- a/config/config.yml.example
+++ b/config/config.yml.example
@@ -2,15 +2,9 @@ feed_url: "http://www2.tomakomai-ct.ac.jp/feed"
 
 notifications:
   email:
-    from: "YOUR EMAIL ADDRESS"
-    server:
-      enable_starttls_auto: true
-      address: "YOUR EMAIL SERVER ADDRESS"
-      domain: "YOUR EMAIL SERVER DOMAIN"
-      port: YOUR_EMAIL_SERVER_PORT
-      authentication: "YOUR_EMAIL_SERVER_AUTHENTICATION"
-      user_name: "YOUR_EMAIL_SERVER_USER_NAME"
-      password: "YOUR_EMAIL_SERVER_PASSWORD"
+    sendgrid_api_key: "YOUR_SENDGRID_API_KEY"
+    from: "YOUR_EMAIL_ADDRESS"
+    database_url: "YOUR_DATABASE_URL"
   twitter:
     consumer_key: "YOUR_TWITTER_CONSUMER_KEY"
     consumer_secret: "YOUR_TWITTER_CONSUMER_SECRET"
