--- a/config/config.yml
+++ b/config/config.yml
@@ -10,3 +10,8 @@ notifications:
     consumer_secret: <%= ENV['TWITTER_CONSUMER_SECRET'] %>
     access_token: <%= ENV['TWITTER_ACCESS_TOKEN'] %>
     access_token_secret: <%= ENV['TWITTER_ACCESS_TOKEN_SECRET'] %>
+  fax:
+    twilio_account_sid: <%= ENV['TWILIO_ACCOUNT_SID'] %>
+    twilio_auth_token: <%= ENV['TWILIO_AUTH_TOKEN'] %>
+    twilio_from_number: <%= ENV['TWILIO_FROM_NUMBER'] %>
+    twilio_to_number: <%= ENV['TWILIO_TO_NUMBER'] %>
